trying to fix gap bug on Safari

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -36,13 +36,9 @@
 }
 #recent-magazines {
     overflow-x: auto;
-    overflow-y: hidden;
-    white-space: nowrap;
-}
-#recent-magazines li {
-    height: 100%;
-    display: inline-block;
-    margin: 0;
+    display: flex;
+    flex-direction: row;
+    column-gap: 1%;
 }
 @media only screen and (max-width: 480px) {
     #front-image-container {
